tests/NormalTests/paczka1/fuzzy1/95178359.err
Error in line 3: S52 A456 39,6
Error in line 8: O5WDj A279 98,1
Error in line 18: S52 S52 357,0
Error in line 21: S52 S293 52,2
Error in line 28: BJ9JWN A456 13,2
Error in line 31: BJ9JWN A279 13,3
Error in line 32: BJ9JWN S52 63,8
Error in line 36: BJ9JWN S293 44,9
